# livespec-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  HANDOFF.md  README.md  ROADMAP.md  fastmcp.json  pyproject.toml
.github/workflows/: ci.yml
bench/: README.md  agent_log_analyze.py  results-baseline.json  results-large.json  run.py
docs/: AGENT_QUICKSTART.md  AGENT_USAGE_DATA.md
src/livespec_mcp/: __init__.py  config.py  instrumentation.py  prompts.py  resources.py  server.py  state.py
src/livespec_mcp/domain/: extractors.py  graph.py  indexer.py  languages.py  matcher.py  md_rfs.py  rag.py  watcher.py
src/livespec_mcp/storage/: db.py  (+1 more)
tests/: conftest.py  test_agent_log_analyze.py  test_aggregator_tools.py  test_body_hash_stability.py  test_bulk_link.py  test_bundler_filter.py  test_dead_code_django.py  test_deprecations.py  test_did_you_mean.py  test_django_cbv.py  test_embeddings.py  test_error_shape.py  test_exports_protect.py  test_extractors.py  test_find_symbol_normalization.py  test_git_diff.py  test_graph_cache.py  test_indexing.py  test_instrumentation.py  test_large_repo.py  test_matcher.py  test_matcher_golden.py  test_md_import.py  test_migrations.py  test_pagination.py  test_phase456.py  test_plugin_autoload.py  test_properties.py  test_propose_requirements.py  test_quick_wins.py  test_regressions.py  test_rf_deps.py  test_rf_hints.py  test_runtime_registration.py  test_scoped_resolution.py  test_search.py  test_targeted_resolver.py  test_traversal_pagination.py  test_ts_framework_entry_points.py  test_tsx_jsx_refs.py  (+3 more)
tests/data/: matcher_golden.jsonl
(+35 files in other folders)
