[project]
name = "livespec-mcp"
version = "0.7.0"
description = "Local-first MCP server for living documentation with bidirectional FR<->code traceability"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Juan Pablo Diaz", email = "juanpablo516@gmail.com" }]
dependencies = [
    "fastmcp>=2.14",
    "pydantic>=2.7",
    "tree-sitter>=0.25",
    "tree-sitter-language-pack>=0.7,<1.6.3",
    "networkx>=3.2",
    "xxhash>=3.4",
    "rank-bm25>=0.2.2",
    "watchdog>=4.0",
]

[project.optional-dependencies]
embeddings = [
    "fastembed>=0.4",
    "sqlite-vec>=0.1.6",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "hypothesis>=6.100",
    "psutil>=5.9",
]

[project.scripts]
livespec-mcp = "livespec_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/livespec_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "embeddings: tests that require the [embeddings] extras (fastembed + sqlite-vec); skipped otherwise",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]
